p2/shared/conf/deployment-app-tree.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-tree
spec:
  selector:
    matchLabels:
      app: app-tree
  template:
    metadata:
      labels:
        app: app-tree
    spec:
      containers:
      - name: nginx
        image: paulbouwer/hello-kubernetes:1.10.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-tree
spec:
  selector:
    app: app-tree
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
